--- a/src/app/components/Button/Button.module.css
+++ b/src/app/components/Button/Button.module.css
@@ -1,5 +1,5 @@
 .primary {
-    background-color: #0070f3;
+    background-color: #788971;
     color: white;
     padding: 0.5rem 1rem;
     border-radius: 20px;
@@ -10,7 +10,7 @@
   }
   
   .primary:hover {
-    background-color: #005bb5;
+    background-color: #384C3F;
   }
   
   /* Secondary variant */
@@ -18,7 +18,7 @@
     background-color: #e2e2e2;
     color: #333;
     padding: 0.5rem 1rem;
-    border-radius: 6px;
+    border-radius: 20px;
     border: none;
     cursor: pointer;
     font-weight: 500;
