--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,6 +4,7 @@
 
   --text-primary: #000;
   --text-secondary: #666;
+  font-family: "Manrope", sans-serif;
 
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
@@ -13,6 +14,7 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
+  
   font-family: var(--font-geist-sans);
   background-color: var(--background);
 }
