--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between; 
     align-items: center;         
-    background-color: red;
+    background-color: white;
     width: 100%;
     height: 50px;
-    padding: 0 20px;              
+                 
 }
