--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,11 +1,10 @@
 .page {
-  --background: #FAFAFA;
+  --background: #fafafa;
   --foreground: #fff;
 
   --text-primary: #000;
   --text-secondary: #666;
   font-family: "Manrope", sans-serif;
-
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
   --button-secondary-border: #ebebeb;
@@ -23,7 +22,7 @@
   display: flex;
   min-height: 100vh;
   width: 100%;
-  max-width: 800px;
+  max-width: 80vw;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
@@ -69,6 +68,7 @@
   max-width: 440px;
   gap: 16px;
   font-size: 14px;
+  padding-top: 20px;
 }
 
 .ctas a {
