--- a/src/app/components/Button/Button.module.css
+++ b/src/app/components/Button/Button.module.css
@@ -56,6 +56,7 @@
   cursor: pointer;
   font-weight: 500;
   transition: background-color 0.2s;
+  font-size: 16px;
 
   display: inline-flex;
   align-items: center;
@@ -66,3 +67,6 @@
 .tertiary:hover {
   background-color: #F5F5F5;
 }
+
+
+.icon {}
