--- a/src/app/components/Footer/Footer.module.css
+++ b/src/app/components/Footer/Footer.module.css
@@ -1,9 +1,9 @@
 .container {
     display: flex;
-    justify-content: space-between; 
+    justify-content: center;
     align-items: center;         
-    background-color: red;
+    background-color: #F5F5F5;
     width: 100%;
-    height: 50px;
-                 
+    height: 20vh;
+             
 }
