--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -4,6 +4,9 @@
     align-items: center;         
     background-color: white;
     width: 100%;
-    height: 50px;
+    height: 10vh;
+    margin-top: 15vh;
+    padding-left: 6vw;
+    padding-right: 6vw;
                  
 }
