Updating buttons and adding links

--- a/src/app/components/Button/Button.module.css
+++ b/src/app/components/Button/Button.module.css
@@ -7,7 +7,6 @@
   cursor: pointer;
   font-weight: 500;
   transition: background-color 0.2s;
-  font-family: "Manrope", sans-serif;
   font-size: 16px;
 
   display: inline-flex;
@@ -57,7 +56,6 @@
   font-weight: 500;
   transition: background-color 0.2s;
   font-size: 16px;
-
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -69,4 +67,30 @@
 }
 
 
-.icon {}
+.icon {
+  height: 16px;
+  width: 16px;
+  
+}
+
+.link {
+  background-color: transparent;
+  color:#1B1917;
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  font-weight: 500;
+  transition: background-color 0.2s;
+  font-size: 16px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5em; 
+  height: 100%;
+
+}
+
+.link:hover {
+  color: #44403C;
+}
