--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,37 @@
+.h1 {
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 48px;
+  text-wrap: balance;
+  color: var(--text-primary);
+}
+
+.p {
+  font-size: 18px;
+  line-height: 32px;
+  text-wrap: balance;
+  color: var(--text-secondary);
+
+}
+
+.double {
+  border: solid;
+  color:red;
+
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+
+.container {
+  border: solid;
+  color: blue;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1em;
+}
+
+
 .intro {
   display: flex;
   flex-direction: column;
@@ -7,7 +41,7 @@
 }
 
 .intro h1 {
-  max-width: 320px;
+  width: 100%;
   font-size: 40px;
   font-weight: 600;
   line-height: 48px;
@@ -17,7 +51,6 @@
 }
 
 .intro p {
-  max-width: 440px;
   font-size: 18px;
   line-height: 32px;
   text-wrap: balance;
@@ -30,3 +63,24 @@
   gap: 10px;
   padding-top: 20px;
 }
+
+.single {
+  display: grid;
+  column-count: 1;
+  justify-content: center;
+  padding-top: 20vh;
+  padding-left: 10vw;
+  padding-right: 10vw;
+
+}
+
+.single h1 {
+  font-size: 40px;
+  font-weight: 600;
+  line-height: 48px;
+  letter-spacing: -2.4px;
+  text-wrap: balance;
+  color: var(--text-primary);
+}
+
+
